# src/routes/v1/roles.routes.js
@@ -8,7 +8,6 @@ const rolesRoutes = express.Router();
 rolesRoutes.post('/roles', isOwner, RoleController.create);
 rolesRoutes.get('/roles', onlyCanAccessWith([WRITE]), RoleController.index);
 rolesRoutes.post('/roles/:role_id', isOwner, RoleController.addPermission);
-
-
+rolesRoutes.delete('/roles/:role_id', isOwner, RoleController.delete);
 
 module.exports = rolesRoutes;
